# spook-teams

./: .gitignore  Cargo.toml  EXPLORE.md
.opencode/skills/openspec-apply-teams/: SKILL.md
openspec/changes/archive/2026-03-23-build-spook-teams/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-build-spook-teams/specs/agent-management/: spec.md
openspec/changes/archive/2026-03-23-build-spook-teams/specs/event-dispatcher/: spec.md
openspec/changes/build-spook-teams/: tasks.md
openspec/changes/build-spook-teams/specs/cmux-spawner/: spec.md
openspec/changes/build-spook-teams/specs/mcp-server-core/: spec.md
openspec/changes/build-spook-teams/specs/worktree-ops/: spec.md
openspec/changes/fix-compiler-warnings/: design.md  proposal.md  tasks.md
openspec/changes/fix-compiler-warnings/specs/no-capabilities/: spec.md
openspec/specs/message-bus/: spec.md
openspec/specs/opencode-sdk-client/: spec.md
openspec/specs/openspec-bridge/: spec.md
openspec/specs/task-engine/: spec.md
openspec/specs/team-lifecycle/: spec.md
src/: agent.rs  bridge.rs  config.rs  event.rs  lib.rs  main.rs  message.rs  opencode.rs  server.rs  task.rs  team.rs  worktree.rs
src/db/: file_changes.rs  member.rs  message.rs  mod.rs  schema.rs  task.rs  task_dep.rs  team.rs  worktree.rs
src/spawner/: cmux.rs  mod.rs
templates/: worker-agent.md
tests/: test_dual_transport.rs  test_e2e.rs  test_messages.rs  test_task_deps.rs  test_team_create.rs  test_worktree.rs
